--- a/package.json
+++ b/package.json
@@ -1,56 +1,49 @@
 {
-  "name": "brobot-exchange",
+  "name": "express-boilerplate",
   "version": "0.0.1",
-  "description": "brobot-exchange",
-  "main": "dist/bundle.js",
-  "types": "dist/types/index.d.ts",
+  "description": "express-boilerplate",
   "scripts": {
-    "build": "run-p 'build.js' 'build.types'",
-    "build.js": "webpack --mode=production",
-    "build.types": "tsc --emitDeclarationOnly",
-    "bundle": "run-s 'clear' 'build'",
-    "clear": "rm -rf dist",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "lint": "eslint --ext ts src",
-    "start": "node -r ts-node/register ./src/index.ts",
+    "start": "node ./lib/index.js",
     "start.dev": "nodemon",
     "test": "jest --passWithNoTests",
     "test.watch": "jest --watch",
     "type-check": "tsc --noEmit",
-    "type-check.watch": "npm run type-check -- --watch"
+    "type-check:watch": "npm run type-check -- --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/noejon/brobot-exchange.git"
+    "url": "git+https://github.com/noejon/express-boilerplate.git"
   },
   "keywords": [],
   "author": "Jonathan Noé",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/noejon/brobot-exchange/issues"
+    "url": "https://github.com/noejon/express-boilerplate/issues"
   },
-  "homepage": "https://github.com/noejon/brobot-exchange#readme",
+  "homepage": "https://github.com/noejon/express-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.3.0",
+    "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jest": "^23.8.2",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
-  }
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {}
 }
